(lang dune 3.21)
(name apubt)

(generate_opam_files true)

(license ISC)
(authors "Anil Madhavapeddy")
(maintainers "Anil Madhavapeddy <anil@recoil.org>")
(source (tangled anil.recoil.org/ocaml-apubt))

(package
 (name apubt)
 (synopsis "ActivityPub client library for OCaml with Eio")
 (description
  "ActivityPub/ActivityStreams protocol implementation for OCaml. \
   Provides typed representations of ActivityPub actors, activities, \
   and objects with bidirectional JSON codecs using jsont. Includes \
   an Eio-based HTTP client for federation with HTTP signature support.")
 (depends
  (ocaml (>= 5.1.0))
  (jsont (>= 0.2.0))
  bytesrw
  (eio (>= 1.0))
  (eio_main (>= 1.0))
  (requests (>= 0.1.0))
  (cmdliner (>= 1.2.0))
  (logs (>= 0.7.0))
  (fmt (>= 0.9.0))
  ptime
  uri
  x509
  (odoc :with-doc)))
