(lang dune 3.17)
(name handled-effectiveness)

(generate_opam_files true)

(license ISC)
(authors "Colin")
(maintainers "Colin")

(package
 (name handled-effectiveness)
 (synopsis
  "Interactive playground for Jane Street's handled_effect, visualized with Bonsai_term")
 (description
  "A small TUI that runs pedagogical algebraic-effect demos built on
   handled_effect (typed effects for OxCaml) and steps through an
   instrumented execution trace so you can see Fork/Yield, state,
   and protocol handlers unfold.")
 (depends
  (ocaml (>= 5.2))
  handled_effect
  unique
  basement
  bonsai
  bonsai_term
  bonsai_term_components
  core
  core_unix
  async
  async_unix
  ppx_jane
  (bonsai_term_test :with-test)
  (bonsai_test :with-test)
  (ppx_expect :with-test)
  (expect_test_helpers_core :with-test)))
