opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_test_harness"
bug-reports: "https://github.com/janestreet/hardcaml_test_harness/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_test_harness.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_test_harness/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "expect_test_helpers_base"
  "hardcaml"
  "hardcaml_lws"
  "hardcaml_step_testbench"
  "hardcaml_waveterm"
  "ppx_hardcaml"
  "ppx_jane"
  "dune"                     {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "A standardized test harness for Hardcaml"
description: "
hardcaml_test_harness helps with common boilerplate when writing Hardcaml tests
using Cyclesim or the Step test library. The harness handles constructing a
test environment from a circuit and producing waveforms for debugging.
"
