opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_xilinx_components"
bug-reports: "https://github.com/janestreet/hardcaml_xilinx_components/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_xilinx_components.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_xilinx_components/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "core_unix"
  "hardcaml"
  "ppx_jane"
  "stdio"
  "dune"      {>= "3.17.0"}
  "re"        {>= "1.8.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Hardcaml Xilinx component definitions"
description: "
A tool for reading Xilinx VHDL Unisim and XPM component definitions from a Vivado
installation and generating Hardcaml interfaces automatically.
"
