opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml_simd"
bug-reports: "https://github.com/janestreet/ocaml_simd/issues"
dev-repo: "git+https://github.com/janestreet/ocaml_simd.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml_simd/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.2.0"}
  "base"
  "core"
  "ocaml_intrinsics"
  "parsexp"
  "ppx_builtin"
  "ppx_jane"
  "ppx_template"
  "sexplib"
  "unboxed"
  "vec"
  "dune"                {>= "3.17.0"}
  "ocaml-compiler-libs" {>= "v0.11.0"}
  "ppxlib"              {>= "0.33.0" & < "0.36.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "SIMD intrinsics supported by the OxCaml compiler."
description: "
 SIMD intrinsics supported by the OxCaml compiler.
"
