opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/portable_lockfree_htbl"
bug-reports: "https://github.com/janestreet/portable_lockfree_htbl/issues"
dev-repo: "git+https://github.com/janestreet/portable_lockfree_htbl.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/portable_lockfree_htbl/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "basement"
  "portable"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Portable lock-free hash table for OxCaml"
description: "
Portable lock-free hash table for OxCaml
"
