opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_box"
bug-reports: "https://github.com/janestreet/ppx_box/issues"
dev-repo: "git+https://github.com/janestreet/ppx_box.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_box/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "ppx_helpers"
  "ppx_jane"
  "ppx_shorthand"
  "ppx_template"
  "ppxlib_jane"
  "dune"          {>= "3.17.0"}
  "ppxlib"        {>= "0.33.0" & < "0.36.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Boxes and unboxes product types."
description: "
This deriving PPX rewriter provides functions that convert product types (records and tuples) between their boxed and unboxed OxCaml representations. There is also an extension ppx that can be used for anonymous tuple types.
"
