opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_debug_assert"
bug-reports: "https://github.com/janestreet/ppx_debug_assert/issues"
dev-repo: "git+https://github.com/janestreet/ppx_debug_assert.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_debug_assert/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.2.0"}
  "dune"   {>= "3.17.0"}
  "ppxlib" {>= "0.33.0" & < "0.36.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Ppx for debug assertions"
description: "
A ppx rewriter for debug assertions.
"
