opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/rpc_parallel"
bug-reports: "https://github.com/janestreet/rpc_parallel/issues"
dev-repo: "git+https://github.com/janestreet/rpc_parallel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/rpc_parallel/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "core"
  "core_kernel"
  "core_unix"
  "current_exe"
  "ppx_jane"
  "dune"        {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Type-safe parallel library built on top of Async_rpc"
description: "
Rpc_parallel offers an API to define various workers and protocols,
spawn workers as separate processes, and communicate with them using
Async Rpc.

"
