opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_type"
bug-reports: "https://github.com/janestreet/sexp_type/issues"
dev-repo: "git+https://github.com/janestreet/sexp_type.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_type/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "basement"
  "dune"     {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Sexp type"
description: "
The definition of `Sexp.t` and `Sexp_grammar.t`.
"
