opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/typerep"
bug-reports: "https://github.com/janestreet/typerep/issues"
dev-repo: "git+https://github.com/janestreet/typerep.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/typerep/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "portable"
  "ppx_template"
  "dune"         {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Typerep is a library for runtime types"
description: "
"
