opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/vec"
bug-reports: "https://github.com/janestreet/vec/issues"
dev-repo: "git+https://github.com/janestreet/vec.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/vec/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.2.0"}
  "core"
  "ppx_for_loop"
  "ppx_jane"
  "ppx_stable_witness"
  "unboxed"
  "dune"               {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Growable array."
description: "
Growable array.
"
