(executables
 (modes byte exe)
 (names main)
 (libraries bonsai_web bonsai_web_components.bonsai_codemirror
   bonsai_web_components.form bonsai_web_components.codemirror
   bonsai_web_components.codemirror_emacs
   bonsai_web_components.codemirror_ocaml_with_janestreet_extensions
   bonsai_web_components.codemirror_themes
   bonsai_web_components.codemirror_vim core virtual_dom.css_gen
   ppx_css.inline_css js_of_ocaml virtual_dom)
 (preprocess
  (pps bonsai.ppx_bonsai ppx_jane ppx_html)))
