(executables
 (modes byte exe)
 (names main)
 (libraries bonsai_web bonsai_web_codemirror_form
   bonsai_web_components.query_box bonsai_web_components.file
   bonsai_web_components.form codemirror_sexp core virtual_dom.css_gen
   js_of_ocaml ppx_typed_fields.typed_fields_lib
   ppx_typed_fields.typed_variants_lib virtual_dom.input_widgets)
 (preprocess
  (pps js_of_ocaml-ppx bonsai.ppx_bonsai ppx_css ppx_jane)))
