(executables
 (modes byte exe)
 (names main)
 (libraries bonsai_web bonsai_web_components.gallery
   bonsai_web_components.form bonsai_web_components.partial_render_table
   bonsai_web.web_ui_partial_render_table_styling core js_of_ocaml
   virtual_dom.ui_effect)
 (preprocess
  (pps bonsai.ppx_bonsai ppx_css ppx_jane)))
