(executables
 (modes byte exe)
 (names main)
 (libraries bonsai_web bonsai_web_components.auto_generated
   bonsai_web_components.form core)
 (preprocess
  (pps bonsai.ppx_bonsai ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file}
   %{workspace_root}/lib/bonsai/old-examples/sexp_grammar/type_intf.ml)
 (action
  (bash "%{deps} -output embedded_files")))
