(library
 (name bonsai_term_test_of_bonsai_term_itself)
 (public_name bonsai_term_test.tests_of_bonsai_term_itself)
 (libraries bonsai_term bonsai_term_components.color_scheme bonsai_term_test
   bonsai_test core expect_test_helpers_core expectable notty-community)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai ppx_quick_test)))
