(library
 (name bonsai_web)
 (public_name bonsai_web)
 (libraries am_running_how_js async_js async_kernel async_log.kernel
   async_rpc_kernel babel bonsai bonsai.driver bonsai.private_base
   bonsai_web_for_introspection bonsai_web_legacy_view
   bonsai_web_test_selector browser.js_types core_kernel.bus core fastdom
   incr_dom incr_dom.javascript_profiling js_of_ocaml core_kernel.moption
   polling_state_rpc rpc_effect_kernel streamable virtual_dom.ui_effect
   virtual_dom.ui_effect_of_deferred bonsai_concrete.ui_incr
   bonsai_concrete.metrics uri versioned_polling_state_rpc virtual_dom)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai)))
